# rust-tidy

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  tidy.pc
docs/: index.html  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
docs/implementors/core/ops/drop/: trait.Drop.js
docs/implementors/std/error/: trait.Error.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/src/tidy/: lib.rs.html
docs/tidy/: all.html  enum.TidySeverity.html  index.html  sidebar-items.js  struct.Tidy.html  struct.TidyError.html  struct.TidyUtil.html  type.TidyConfigCategory.html  type.TidyOption.html  type.TidyOptionId.html
src/: main.rs
tidy/: Cargo.toml  wrapper.h
tidy-bin/: Cargo.toml
tidy-bin/src/: main.rs
tidy-lib/: Cargo.toml  build.rs
tidy-lib/src/: bindings.rs  lib.rs
tidy-rs/: Cargo.toml
tidy-rs/src/: lib.rs
tidy-sys/: Cargo.toml  build.rs  wrapper.h
tidy-sys/src/: bindings.rs  lib.rs
tidy-test/: Cargo.toml  test.xml
tidy-test/src/: main.rs
tidy-test/tidy/: Cargo.toml
tidy/src/: lib.rs
