[package]
name = "tidy-sys"
version = "0.1.6"
authors = ["Wolfgang Grimm <grimm@mondial.at>"]
edition = "2018"
links = "tidy"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
regex = "1"
bindgen = "0.60.1"
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3.0"
cmake = "0.1"

[build-dependencies.pkg-config]
optional = true
version = "0.3"
