[package]
name = "tidy-test"
version = "0.1.0"
authors = ["Wolfgang Grimm <grimm@mondial.at>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tidy = { vversion = "0.1.0", path = "../tidy" }
