[package]
name = "tidy"
version = "0.1.3"
authors = ["Wolfgang Grimm <grimm@mondial.at>"]
edition = "2018"
links = "tidy"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
regex = "1"
bindgen = "0.55"
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"
